RESOLVED FIXED294824
[WebDriver][BiDi] Fix error forwarding for errors with detail string
https://bugs.webkit.org/show_bug.cgi?id=294824
Summary [WebDriver][BiDi] Fix error forwarding for errors with detail string
Lauro Moura
Reported 2025-06-22 20:43:14 PDT
Currently, if we return an error message with a detail string, `WebDriverBiDiProcessor::sendBidiMessage` returns "UnknownError" with the payload being the exception error, a ";", and the detail string. This is happening because we don't split the incoming internal error message if we have the ";" separator. This is happening, for example, when we use something like `callback(makeUnexpected(STRING_FOR_PREDEFINED_ERROR_NAME_AND_DETAILS(InvalidParameter, "Subscription ID must be a valid string."_s)));` Patch incoming.
Attachments
Lauro Moura
Comment 1 2025-06-22 21:21:33 PDT
Radar WebKit Bug Importer
Comment 2 2025-06-29 20:44:11 PDT
EWS
Comment 3 2025-08-25 05:26:14 PDT
Committed 299108@main (f8c41ac3bcf6): <https://commits.webkit.org/299108@main> Reviewed commits have been landed. Closing PR #47044 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.