Source/WebKit/UIProcess/Automation/WebDriverBidiProcessor.cpp
@@ -181,8 +181,18 @@ void WebDriverBidiProcessor::sendBidiMessage(const String& message)
             auto bidiErrorObj = JSON::Object::create();
             bidiErrorObj->setString("type"_s, "error"_s);
             auto internalMsg = internalErrorObj->getString("message"_s);
-            bidiErrorObj->setString("message"_s, internalMsg);
-            bidiErrorObj->setString("error"_s, toBidiErrorCode(*codeField, internalMsg));
+            auto divot = internalMsg.find(';');
+            if (divot != notFound) {
+                auto errorName = internalMsg.substring(0, divot);
+                auto errorDetail = internalMsg.substring(divot + 1);
+                if (errorDetail.isEmpty())
+                    errorDetail = "An error occurred."_s;
+                bidiErrorObj->setString("message"_s, errorDetail);
+                bidiErrorObj->setString("error"_s, toBidiErrorCode(*codeField, errorName));
+            } else {
+                bidiErrorObj->setString("message"_s, internalMsg);
+                bidiErrorObj->setString("error"_s, toBidiErrorCode(*codeField, internalMsg));
+            }
             if (auto commandId = msgObj->getInteger("id"_s))
                 bidiErrorObj->setInteger("id"_s, *commandId);
 
